syntax = "proto3";
package main;
option go_package = "./proto";

service PersonService {
    rpc CreatePerson(PersonModel) returns (CreatePersonResponse) {}
}

message PersonModel {
    string name = 1;
    int64 age = 2;
    AddressModel address = 3;
    repeated string diary = 4;
}

message AddressModel {
    string street = 1;
    string neighborhood = 2;
    string city = 3;
}

message CreatePersonResponse {
    string status = 1;
}